--- a/bootstrap-tourist.css
+++ b/bootstrap-tourist.css
@@ -1,29 +1,60 @@
 /* ========================================================================
- * Bootstrap Tourist v0.7
+ * Bootstrap Tourist
  * Copyright FFS 2019
  * @ IGreatlyDislikeJavascript on Github
  *
- * bootstrap-tour - v0.11.0
- * http://bootstraptour.com
- * ========================================================================
- * Copyright 2012-2015 Ulrich Sossou
- *
- * ========================================================================
- * Licensed under the MIT License (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     https://opensource.org/licenses/MIT
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- * ========================================================================
+ * z indexes:
+ *				1110 - backdrop (black bg)
+ *				1111 - highlight & tour element ()set by js)
+ *				1112 - prevent
+ *				1113 - popover
  */
 
- .tour-backdrop {
+ #contextMenu {
+  z-index: 100000;
+}
+.tour .popover-title {
+  text-transform: capitalize;
+  font-size: 16px;
+  padding: 15px;
+}
+
+.popover .btn-end {
+  position: absolute;
+  top: 9px;
+  right: 5px;
+  background: transparent;
+  border: none;
+  color: white;
+}
+
+.popover > .arrow {
+  border-width: 10px;
+}
+
+.popover.bottom > .arrow {
+  margin-left: -10px;
+  top: -10px;
+}
+
+.popover.top > .arrow {
+  margin-left: -10px;
+  bottom: -10px;
+}
+
+.popover.left > .arrow {
+  right: -10px;
+}
+
+.popover.right > .arrow {
+  left: -10px;
+}
+
+.tour-backdrop {
+  opacity: 0.5 !important;
+}
+
+.tour-backdrop {
   top: 0;
   bottom: 0;
   left: 0;
@@ -33,64 +64,92 @@
   box-sizing: content-box;
   z-index: 1110;
   background-color: #000;
-  opacity: 0;
-  -ms-filter: "alpha(opacity=50)";
-  filter: alpha(opacity=50);
+  opacity: 0.8;
+  -ms-filter: "alpha(opacity=90)";
+  filter: alpha(opacity=90);
+}
+
+
+.tour-backdrop-animation {
   -webkit-transition: all .3s ease-out;
   -moz-transition: all .3s ease-out;
   -ms-transition: all .3s ease-out;
   -o-transition: all .3s ease-out;
   transition: all .3s ease-out;
 }
-.backdrop-active {
-  opacity: 0.2;
-}
+
 .tour-prevent {
   position: absolute;
   z-index: 1112;
   opacity: 0.20;
   filter: alpha(opacity=20);
 }
+
 .tour-highlight {
   box-sizing: content-box;
   position: absolute;
   z-index: 1110;
   background-color: #FFF;
   background-color: rgba(255,255,255,.9);
-  -webkit-transition: all .3s ease-out;
-  -moz-transition: all .3s ease-out;
-  -ms-transition: all .3s ease-out;
-  -o-transition: all .3s ease-out;
-  transition: all .3s ease-out;
 }
-.highlight-element {
+
+.tour-highlight-element {
   position: relative;
-  z-index: 1111;
+  z-index: 1111 !important;
 }
+
+.tour-highlight-animation {
+  transition-property: all;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-in-out;
+  transition-delay: 0s;
+}
+
+.tour-highlight-fade {
+  transition-property: opacity;
+}
+.fade-out {
+  opacity: 0 !important;
+}
+
 .popover[class*="tour-"] {
   z-index: 1113;
 }
-.popover[class*="tour-"] .popover-navigation {
-  padding: 9px 14px;
-  overflow: hidden;
+
+  .popover[class*="tour-"] .popover-navigation {
+      padding: 9px 14px;
+      overflow: hidden;
+  }
+
+      .popover[class*="tour-"] .popover-navigation *[data-role="end"] {
+          float: right;
+      }
+
+      .popover[class*="tour-"] .popover-navigation *[data-role="prev"],
+      .popover[class*="tour-"] .popover-navigation *[data-role="next"],
+      .popover[class*="tour-"] .popover-navigation *[data-role="end"] {
+          cursor: pointer;
+      }
+
+          .popover[class*="tour-"] .popover-navigation *[data-role="prev"].disabled,
+          .popover[class*="tour-"] .popover-navigation *[data-role="next"].disabled,
+          .popover[class*="tour-"] .popover-navigation *[data-role="end"].disabled {
+              cursor: default;
+          }
+
+  .popover[class*="tour-"].orphan {
+      position: fixed;
+      margin-top: 0;
+  }
+
+      .popover[class*="tour-"].orphan .arrow {
+          display: none;
+      }
+
+.behind {
+  z-index: -1;
 }
-.popover[class*="tour-"] .popover-navigation *[data-role="end"] {
-  float: right;
-}
-.popover[class*="tour-"] .popover-navigation *[data-role="prev"],
-.popover[class*="tour-"] .popover-navigation *[data-role="next"],
-.popover[class*="tour-"] .popover-navigation *[data-role="end"] {
-  cursor: pointer;
-}
-.popover[class*="tour-"] .popover-navigation *[data-role="prev"].disabled,
-.popover[class*="tour-"] .popover-navigation *[data-role="next"].disabled,
-.popover[class*="tour-"] .popover-navigation *[data-role="end"].disabled {
-  cursor: default;
-}
-.popover[class*="tour-"].orphan {
-  position: fixed;
-  margin-top: 0;
-}
-.popover[class*="tour-"].orphan .arrow {
-  display: none;
+
+.zindexFix {
+  z-index: 1029;
 }
