--- a/bootstrap-tourist.css
+++ b/bootstrap-tourist.css
@@ -10,51 +10,7 @@
  *				1113 - popover
  */
 
- #contextMenu {
-  z-index: 100000;
-}
-.tour .popover-title {
-  text-transform: capitalize;
-  font-size: 16px;
-  padding: 15px;
-}
-
-.popover .btn-end {
-  position: absolute;
-  top: 9px;
-  right: 5px;
-  background: transparent;
-  border: none;
-  color: white;
-}
-
-.popover > .arrow {
-  border-width: 10px;
-}
-
-.popover.bottom > .arrow {
-  margin-left: -10px;
-  top: -10px;
-}
-
-.popover.top > .arrow {
-  margin-left: -10px;
-  bottom: -10px;
-}
-
-.popover.left > .arrow {
-  right: -10px;
-}
-
-.popover.right > .arrow {
-  left: -10px;
-}
-
-.tour-backdrop {
-  opacity: 0.5 !important;
-}
-
-.tour-backdrop {
+ .tour-backdrop {
   top: 0;
   bottom: 0;
   left: 0;
@@ -68,7 +24,6 @@
   -ms-filter: "alpha(opacity=90)";
   filter: alpha(opacity=90);
 }
-
 
 .tour-backdrop-animation {
   -webkit-transition: all .3s ease-out;
@@ -93,63 +48,58 @@
   background-color: rgba(255,255,255,.9);
 }
 
+.tour-highlight-animation {
+  -webkit-transition: all .3s ease-out;
+  -moz-transition: all .3s ease-out;
+  -ms-transition: all .3s ease-out;
+  -o-transition: all .3s ease-out;
+  transition: all .3s ease-out;
+}
+
 .tour-highlight-element {
   position: relative;
   z-index: 1111 !important;
-}
-
-.tour-highlight-animation {
-  transition-property: all;
-  transition-duration: 0.3s;
-  transition-timing-function: ease-in-out;
-  transition-delay: 0s;
-}
-
-.tour-highlight-fade {
-  transition-property: opacity;
-}
-.fade-out {
-  opacity: 0 !important;
 }
 
 .popover[class*="tour-"] {
   z-index: 1113;
 }
 
-  .popover[class*="tour-"] .popover-navigation {
-      padding: 9px 14px;
-      overflow: hidden;
-  }
+.popover[class*="tour-"] .popover-navigation {
+	padding: 9px 14px;
+	overflow: hidden;
+}
 
-      .popover[class*="tour-"] .popover-navigation *[data-role="end"] {
-          float: right;
-      }
+.popover[class*="tour-"] .popover-navigation *[data-role="end"] {
+	float: right;
+}
 
-      .popover[class*="tour-"] .popover-navigation *[data-role="prev"],
-      .popover[class*="tour-"] .popover-navigation *[data-role="next"],
-      .popover[class*="tour-"] .popover-navigation *[data-role="end"] {
-          cursor: pointer;
-      }
+.popover[class*="tour-"] .popover-navigation *[data-role="prev"],
+.popover[class*="tour-"] .popover-navigation *[data-role="next"],
+.popover[class*="tour-"] .popover-navigation *[data-role="end"] {
+	cursor: pointer;
+}
 
-          .popover[class*="tour-"] .popover-navigation *[data-role="prev"].disabled,
-          .popover[class*="tour-"] .popover-navigation *[data-role="next"].disabled,
-          .popover[class*="tour-"] .popover-navigation *[data-role="end"].disabled {
-              cursor: default;
-          }
+.popover[class*="tour-"] .popover-navigation *[data-role="prev"].disabled,
+.popover[class*="tour-"] .popover-navigation *[data-role="next"].disabled,
+.popover[class*="tour-"] .popover-navigation *[data-role="end"].disabled {
+	cursor: default;
+}
 
-  .popover[class*="tour-"].orphan {
-      position: fixed;
-      margin-top: 0;
-  }
+.popover[class*="tour-"].orphan {
+	position: fixed;
+	margin-top: 0;
+}
 
-      .popover[class*="tour-"].orphan .arrow {
-          display: none;
-      }
+.popover[class*="tour-"].orphan .arrow {
+	display: none;
+}
+
 
 .behind {
-  z-index: -1;
+    z-index: -1;
 }
 
 .zindexFix {
-  z-index: 1029;
+    z-index: 1029;
 }
